--- a/UserControlLib/packages.config
+++ b/UserControlLib/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="kenjiuno.PdfSharp.Xps" version="1.1.12" targetFramework="net472" />
+  <package id="kenjiuno.PdfSharp-WPF" version="1.31.6605" targetFramework="net472" />
   <package id="Microsoft.Web.WebView2" version="1.0.1823.32" targetFramework="net472" />
+  <package id="PDFsharp" version="1.50.5147" targetFramework="net472" />
 </packages>
